--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -195,6 +195,7 @@ body {
     gwd.duration_change = function(event) {
       // update graph
       sel = document.getElementById("duration").value;
+      WaitDownload();
       sort_update();
     };
     gwd.c_b_click = function(event) {
@@ -277,7 +278,7 @@ body {
       ];
 
       var titles = ['Temperature', '', ' Humidity  ', '', ' Pressure  ', ' Wind Speed ', '', ' Rain Fall '];
-      var plot = ['Min', 'Max', 'Min', 'Max', 'Mean', 'Mean', 'Gust', 'Total'];
+      var plot = ['Outside', 'Inside', 'Outside', 'Inside', 'Mean', 'Mean', 'Gust', 'Total'];
       var axis_x_label = ['Minutes', 'Hours', 'Day of Week', 'Day of Month', 'Week of Year'];
       var axis_y_label = ['C', '', '%', '', 'mB', 'mph', '', 'mm'];
       var myarr;
@@ -699,10 +700,10 @@ body {
         xhr.send(null);
       }
 
-      function draw_graph(num, range, max, ticks, points, t_index, first) {
+      function draw_graph(num, range, min, ticks, points, t_index, first) {
         var ctx = chart[num];
         ctx.font = "10px Arial";
-        ctx.clearRect(0, 0, 800, 800);
+        ctx.clearRect(0, 0, 820, 800);
         var y_inc = range / 4;
         var x = 60;
         var y = 30;
@@ -729,36 +730,37 @@ body {
         var xs = w / ticks;
         var c_b = y + h;
         var i = first;
+        ctx.font = "11px Arial";
         ctx.beginPath();
         do {
-          ctx.fillText(i, xl, y + h + 10);
+          ctx.fillText(i, xl, y + h + 14);
           xl += xs;
           ctx.moveTo(xl, y);
           ctx.lineTo(xl, c_b);
           i += x_step;
         } while (xl < w + x - 1);
-        ctx.fillText(i, xl, y + h + 10);
+        ctx.fillText(i, xl, y + h + 14);
         ctx.stroke();
         var yl = y;
         c_b = x + w;
         ctx.beginPath();
-        i = max;
+        i = min + range;
         var step = range / steps;
         do {
-          ctx.fillText(i, 45, yl);
+          ctx.fillText(i, 45, yl + 5);
           yl += ys;
           ctx.moveTo(x, yl);
           ctx.lineTo(c_b, yl);
           i -= step;
         } while (yl < h + y - 1);
-        ctx.fillText(i, 45, yl);
+        ctx.fillText(i, 45, yl + 5);
         ctx.stroke();
         ctx.font = "13px Arial";
         ctx.fillText(axis_y_label[t_index], 18, y + (h / 2));
         ctx.fillText(titles[t_index], x + (w / 2), 17);
-        ctx.fillText(sel, x + (w / 2), yl + 25);
+        ctx.fillText(sel, x + (w / 2), yl + 28);
 
-        ctx.font = "10px Arial";
+        ctx.font = "11px Arial";
       }
 
       build_history = function(data_valid, len) {
@@ -807,10 +809,10 @@ body {
         }
         if (data_valid === 0) {
           do {
-            min = -1;
-            max = 1;
+            min = 0;
+            max = 2;
             range = 2
-            draw_graph(plots, range, max, ticks, points, 0, 0);
+            draw_graph(plots, range, min, ticks, points, 0, 0);
             plots++;
           } while (plots < 5);
         } else {
@@ -819,20 +821,18 @@ body {
             max = m_m_arr[1][d_set];
             range = max - min;
             if (plots === 0)
-              if (range > 8) range = Math.ceil(range / 8) * 8;
-              else Math.ceil(range / 4) * 4;
+                range = Math.ceil(range / 8) * 8;
             else
-            if (range > 4) range = Math.ceil(range / 4) * 4;
-            else Math.ceil(range / 2) * 2;
-            draw_graph(plots, range, max, ticks, points, d_set, first);
+              range = Math.ceil(range / 4) * 4;
+            draw_graph(plots, range, min, ticks, points, d_set, first);
             temp = new Array();
             temp = myarr[d_set];
-            fill_chart(0, plots, temp, range, max, points, d_set);
+            fill_chart(0, plots, temp, range, min, points, d_set);
             if ((d_set === 0) || (d_set === 2) || (d_set === 5)) {
               d_set++;
               temp = new Array();
               temp = myarr[d_set];
-              fill_chart(1, plots, temp, range, max, points, d_set);
+              fill_chart(1, plots, temp, range, min, points, d_set);
             }
             d_set++;
             if (d_set === 8) d_set = 0;
@@ -848,7 +848,7 @@ body {
         }
       }
 
-      function fill_chart(col, c_num, p_data, range, max, p, type) {
+      function fill_chart(col, c_num, p_data, range, min, p, type) {
         var ctx = chart[c_num];
         var x = 60;
         var y = 30;
@@ -869,15 +869,15 @@ body {
           ctx.strokeStyle = "blue";
           ctx.fillStyle = "blue";
           ctx.fillRect(110, 7, 15, 10);
-        }
+        }  
         var y_inc = h / range;
-        var i = max;
+        var i = min + range;
         var s = 0;
         var y1 = 0;
         var xs = w / p;
         var xm = x + (xs * marker);
         var hm = y + h;
-        y1 = y + (y_inc * (i - p_data[0]));
+        y1 = y  + (y_inc * (i - p_data[0]));
         ctx.lineWidth = 2;
         ctx.beginPath();
         ctx.moveTo(x, y1);
@@ -895,11 +895,14 @@ body {
           ctx.beginPath();
           ctx.fillStyle = "black";
           ctx.moveTo(xm - 5, hm);
-          ctx.lineTo(xm, hm - 5);
+          ctx.lineTo(xm, hm - 7);
           ctx.lineTo(xm + 5, hm);
           ctx.lineTo(xm - 5, hm);
           ctx.fill();
         }
+        
+          ctx.strokeStyle = "black";
+          ctx.fillStyle = "black";
 
       }
 
@@ -945,10 +948,10 @@ body {
                 m_m_arr[0][1] = m_m_arr[0][0];
                 m_m_arr[1][1] = m_m_arr[1][0];
 
-                if (parseFloat(all_dat[5 + (61 * 29)]) < parseFloat(all_dat[20 + (61 * 29)])) //hum low
+                if (parseFloat(all_dat[5 + (61 * 29)]) < parseFloat(all_dat[23 + (61 * 29)])) //hum low
                   m_m_arr[0][2] = Math.floor(all_dat[5 + (61 * 29)]) - 1;
                 else
-                  m_m_arr[0][2] = Math.floor(all_dat[20 + (61 * 29)]) - 1;
+                  m_m_arr[0][2] = Math.floor(all_dat[23 + (61 * 29)]) - 1;
 
                 if (parseFloat(all_dat[6 + (61 * 29)]) > parseFloat(all_dat[24 + (61 * 29)])) //hum high
                   m_m_arr[1][2] = Math.ceil(all_dat[6 + (61 * 29)]) + 1;
@@ -1159,20 +1162,18 @@ body {
           max = m_m_arr[1][h_c];
           range = max - min;
           if (plots === 0)
-            if (range > 8) range = Math.ceil(range / 8) * 8;
-            else range = Math.ceil(range / 4) * 4;
+            range = Math.ceil(range / 8) * 8;
           else
-          if (range > 4) range = Math.ceil(range / 4) * 4;
-          else range = Math.ceil(range / 2) * 2;
+            range = Math.ceil(range / 4) * 4;
           temp = new Array();
           temp = myarr[h_c];
-          draw_graph(plots, range, max, ticks, points, h_c, first);
-          fill_chart(0, plots, temp, range, max, points, h_c);
+          draw_graph(plots, range, min, ticks, points, h_c, first);
+          fill_chart(0, plots, temp, range, min, points, h_c);
           if ((h_c === 0) || (h_c === 2) || (h_c === 5)) {
             h_c++;
             temp = new Array();
             temp = myarr[h_c];
-            fill_chart(1, plots, temp, range, max, points, h_c);
+            fill_chart(1, plots, temp, range, min, points, h_c);
           }
           h_c++;
           if (h_c === 8) h_c = 0;
@@ -1224,7 +1225,7 @@ body {
   </script>
   <div class="gwd-div-1w7a gwd-gen-19kmgwdanimation">
     <div class="menu ">
-      <label id="ld" for="duration" class="select_box">History Duration</label>
+      <label id="ld" for="duration" class="select_box">History &nbsp; </label>
       <select id="duration" height="30" width="100" margin="auto">
         <option value="hour">Hour</option>
         <option value="day">Day</option>
@@ -1268,7 +1269,7 @@ body {
           </div>
         </div>
         <div class="column_1">
-          <canvas id="canvas_a" height="680" width="820"></canvas>
+          <canvas id="canvas_a" width="820" height="680"></canvas>
         </div>
       </div>
     </div>
