--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -361,10 +361,10 @@ win.beginPath();
 win.textAlign = "center";
 win.fillStyle = "Black";
 win.font = "14px Arial";
-win.fillText(" now ", 360, 355);
-win.fillText("this", 630, 355);
-win.fillText(" hr ", 630, 370);
-win.fillText("Rain Fall ( mm/h )", 500, 463);
+win.fillText(" now ", 370, 335);
+win.fillText("this", 620, 335);
+win.fillText(" hr ", 620, 350);
+win.fillText("Rain Fall ( mm/h )", 500, L2 + 80);
 }
 
 function rain_plot(now, total, win) {
